test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/conflicting_local_declarations.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(1)
  ;
  static
  int
  identifier(x)
  ;
  return
  identifier(x)
  ;
  }
